<resources>
    <string name="app_name">ChargeShare</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_btn">Not account yet? Create one</string>
    <string name="skip_login">Continue without logging ></string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="add_purpose">Add Purpose</string>
    <string name="adress">Adress</string>
    <string name="time_from">From</string>
    <string name="time_to">To</string>
    <string name="phone_number">Phone Number</string>
    <string name="description">Description</string>
</resources>
