<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activivty_vertical_margin_large">

        <TextView
            android:id="@+id/txt_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/colorTextSecondary" />

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_name_label" />

        <TextView
            android:id="@+id/txt_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_name"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/e_mail"
            android:textColor="@color/colorTextSecondary" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_email_label" />

        <TextView
            android:id="@+id/txt_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_email"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/password"
            android:textColor="@color/colorTextSecondary" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:password="true"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_password_label" />

        <TextView
            android:id="@+id/txt_confirm_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_password"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/confirm_password"
            android:textColor="@color/colorTextSecondary" />

        <EditText
            android:id="@+id/txt_confirm_password"
            android:layout_width="match_parent"
            android:password="true"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_confirm_password_label" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_confirm_password"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimaryDark"
            android:text="@string/sign_up"
            android:textColor="@color/colorTextPrimary" />
    </RelativeLayout>
</LinearLayout>