<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activivty_horizontal_margin_large"
        android:layout_marginRight="@dimen/activivty_horizontal_margin_large"
        android:layout_marginTop="@dimen/activivty_vertical_margin_large">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@drawable/chargesharelogo"/>

        <TextView
            android:id="@+id/txt_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_logo"
            android:text="@string/e_mail"
            android:textColor="@color/colorTextSecondary" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_email_label" />

        <TextView
            android:id="@+id/txt_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_email"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/password"
            android:textColor="@color/colorTextSecondary" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_password_label"
            android:password="true" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_password"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login"
            android:textColor="@color/colorTextPrimary" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/sign_up_btn"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary" />

        <TextView
            android:id="@+id/txt_skip_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/skip_login"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary" />
    </RelativeLayout>
</LinearLayout>